results/2f7be2b2feae901037f485d6d6d32a19/err_code.txt
  File "./pyfile.py", line 18
    runitem = MCMCWrapper(emcee, 'm,c', x, '{"m":{"priortype":"Uniform","minval":"-1","maxval":"1","meanval":0,"sigmaval":0},"c":{"priortype":"Uniform","minval":"-10","maxval":"10","meanval":0,"sigmaval":0}}', 1000, 1000, 100, 2, {errval}, fanatapan@yahoo.co.uk, 2f7be2b2feae901037f485d6d6d32a19, {modelStrings}, 'x, 0.65,')
                                                                                                                                                                                                                                                         ^
SyntaxError: invalid syntax
